[flake8]
max-line-length = 119
ignore = dummy
exclude = .git,__pycache__,venv

[isort]
known_first_party = treehugger
line_length = 120
multi_line_output = 5
not_skip = __init__.py

[metadata]
license_file = LICENSE

[tool:multilint]
paths = setup.py
        tests
        treehugger

[tool:pytest]
site_dirs = .
norecursedirs = venv
